Closed Bug 699705 Opened 14 years ago Closed 14 years ago

Getting a property off an array that lives on a non-native on the proto chain and has a getter that uses |this| fails

Categories

(Core :: JavaScript Engine, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

The problem is that we use js_NativeGet and hence have to stick to native objects. This is a remaining unfixed case from bug 434837. At the time we had no way to fix, but now we do.
OS: Mac OS X → All
Priority: -- → P2
Hardware: x86 → All
Whiteboard: [need review]
Version: 9 Branch → Trunk
Attachment #571883 - Flags: review?(jwalden+bmo) → review+
As I noted on IRC, this patch demonstrates one reason why we should make getOwnProperty, in some form, the fundamental property-get operation. Every one of these methods has to hard-code the property-delegation lookup process, and every one has to be fixed if a bug is found, as here. I started this in bug 637378 half a year ago and hit a nontrivial XBL-based snag. Perhaps we should go back and beat XBL into submission so we could move further in that direction...
Depends on: 698495
Whiteboard: [need review] → [need landing]
Flags: in-testsuite+
Whiteboard: [need landing]
Target Milestone: --- → mozilla10
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Depends on: 743425
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: