Bug 699705.  When forwarding property gets to the proto for arrays, send along the right receiver even if the property lives on a non-native object.  r=waldo